--- a/roles/generate-content/templates/instances.txt.j2
+++ b/roles/generate-content/templates/instances.txt.j2
@@ -7,7 +7,7 @@ ansible_port={{ ssh_port }}
 
 {% if instances.results is defined %}
 [web]
-{% for grouper, list in instances.results|groupby('item') if grouper.item[0] == item %}
+{% for grouper, list in instances.results|groupby('item') if grouper.item is defined and grouper.item[0] == item %}
 {% for vm in list %}
 {% if 'control' not in vm.invocation.module_args.instance_tags.Name and 'haproxy' not in vm.invocation.module_args.instance_tags.Name%}
 {{ vm.invocation.module_args.instance_tags.Name | regex_replace('.*-(node)(\\d)', '\\1-\\2') }} ansible_host={{ vm.tagged_instances[0].public_ip }}
@@ -16,7 +16,7 @@ ansible_port={{ ssh_port }}
 {% endfor %}
 
 [control]
-{% for grouper, list in instances.results|groupby('item') if grouper.item[0] == item %}
+{% for grouper, list in instances.results|groupby('item') if grouper.item is defined and grouper.item[0] == item %}
 {% for vm in list %}
 {% if 'control' in vm.invocation.module_args.instance_tags.Name %}
 {{ vm.invocation.module_args.instance_tags.Name | regex_replace('.*-([\\w]*)', '\\1') }} ansible_host={{ vm.tagged_instances[0].public_ip }}
@@ -25,7 +25,7 @@ ansible_port={{ ssh_port }}
 {% endfor %}
 
 [haproxy]
-{% for grouper, list in instances.results|groupby('item') if grouper.item[0] == item %}
+{% for grouper, list in instances.results|groupby('item') if grouper.item is defined and grouper.item[0] == item %}
 {% for vm in list %}
 {% if 'haproxy' in vm.invocation.module_args.instance_tags.Name %}
 {{ vm.invocation.module_args.instance_tags.Name | regex_replace('.*-([\\w]*)', '\\1') }} ansible_host={{ vm.tagged_instances[0].public_ip }}
@@ -34,7 +34,7 @@ ansible_port={{ ssh_port }}
 {% endfor %}
 
 [grafana]
-{% for grouper, list in instances.results|groupby('item') if grouper.item[0] == item %}
+{% for grouper, list in instances.results|groupby('item') if grouper.item is defined and grouper.item[0] == item %}
 {% for vm in list %}
 {% if 'haproxy' in vm.invocation.module_args.instance_tags.Name %}
 grafana ansible_host={{ vm.tagged_instances[0].public_ip }}
