--- a/roles/generate-content/templates/test.txt.j2
+++ b/roles/generate-content/templates/test.txt.j2
@@ -1,4 +1,4 @@
-{% for grouper, list in instances.results|groupby('item.item.item.pod_name') if grouper.item.item.item.pod_name == item.username %}
+{% for grouper, list in instances.results|groupby('item.item.item.pod_name') if grouper.item.item.item.pod_name == user.username %}
 {% for vm in list %}
 {{ vm.invocation.module_args.instance_tags.Name }}
 {% endfor %}
