--- a/roles/generate-content/templates/test.txt.j2
+++ b/roles/generate-content/templates/test.txt.j2
@@ -1,4 +1,4 @@
-{% for grouper, list in instances.results if grouper.invocation.module_args.instance_tags.pod == user.username %}
+{% for list in instances.results if list.invocation.module_args.instance_tags.pod == user.username %}
 {% for vm in list %}
 {{ vm.invocation.module_args.instance_tags.name }}
 {% endfor %}
