--- a/roles/generate-content/templates/instances.txt.j2
+++ b/roles/generate-content/templates/instances.txt.j2
@@ -6,39 +6,30 @@ ansible_port={{ ssh_port }}
 {% endif %}
 
 {% if instances.results is defined %}
-[web]
-{% for grouper, list in instances.results|groupby('item') if grouper.item is defined and item.username in grouper.item.item.pod_name %}
-{% for vm in list %}
-{% if 'control' not in vm.invocation.module_args.instance_tags.Name and 'haproxy' not in vm.invocation.module_args.instance_tags.Name%}
-{{ vm.invocation.module_args.instance_tags.Name | regex_replace('.*-(node)(\\d)', '\\1-\\2') }} ansible_host={{ vm.tagged_instances[0].public_ip }}
+[cfme]
+{% for vm in instances.results if vm.invocation.module_args.instance_tags.pod == item.username %}
+{% if 'cfme' in vm.invocation.module_args.instance_tags.role %}
+{{ vm.invocation.module_args.instance_tags.name | regex_replace('.*-([\\w]*)', '\\1') }} ansible_host={{ vm.tagged_instances[0].public_ip }}
 {% endif %}
 {% endfor %}
+
+[tower]
+{% for vm in instances.results if vm.invocation.module_args.instance_tags.pod == item.username %}
+{% if 'tower' in vm.invocation.module_args.instance_tags.role %}
+{{ vm.invocation.module_args.instance_tags.name | regex_replace('.*-([\\w]*)', '\\1') }} ansible_host={{ vm.tagged_instances[0].public_ip }}
+{% endif %}
+{% endfor %}
+
+[web]
+{% for vm in instances.results if vm.invocation.module_args.instance_tags.pod == item.username %}
+{% if 'control' not in vm.invocation.module_args.instance_tags.name and 'haproxy' not in vm.invocation.module_args.instance_tags.name%}
+{{ vm.invocation.module_args.instance_tags.name | regex_replace('.*-(node)(\\d)', '\\1-\\2') }} ansible_host={{ vm.tagged_instances[0].public_ip }}
+{% endif %}
 {% endfor %}
 
 [control]
-{% for grouper, list in instances.results|groupby('item') if grouper.item is defined and item.username in grouper.item.item.pod_name %}
-{% for vm in list %}
-{% if 'control' in vm.invocation.module_args.instance_tags.Name %}
-{{ vm.invocation.module_args.instance_tags.Name | regex_replace('.*-([\\w]*)', '\\1') }} ansible_host={{ vm.tagged_instances[0].public_ip }}
+{% for vm in instances.results if vm.invocation.module_args.instance_tags.pod == item.username %}
+{% if 'control' in vm.invocation.module_args.instance_tags.name %}
+{{ vm.invocation.module_args.instance_tags.name | regex_replace('.*-([\\w]*)', '\\1') }} ansible_host={{ vm.tagged_instances[0].public_ip }}
 {% endif %}
 {% endfor %}
-{% endfor %}
-
-[haproxy]
-{% for grouper, list in instances.results|groupby('item') if grouper.item is defined and item.username in grouper.item.item.pod_name %}
-{% for vm in list %}
-{% if 'haproxy' in vm.invocation.module_args.instance_tags.Name %}
-{{ vm.invocation.module_args.instance_tags.Name | regex_replace('.*-([\\w]*)', '\\1') }} ansible_host={{ vm.tagged_instances[0].public_ip }}
-{% endif %}
-{% endfor %}
-{% endfor %}
-
-[grafana]
-{% for grouper, list in instances.results|groupby('item') if grouper.item is defined and item.username in grouper.item.item.pod_name %}
-{% for vm in list %}
-{% if 'haproxy' in vm.invocation.module_args.instance_tags.Name %}
-grafana ansible_host={{ vm.tagged_instances[0].public_ip }}
-{% endif %}
-{% endfor %}
-{% endfor %}
-{% endif %}
