--- a/roles/generate-content/templates/index.html.j2
+++ b/roles/generate-content/templates/index.html.j2
@@ -83,22 +83,32 @@ ansible_ssh_pass={{ admin_password }}<br />
 ansible_port={{ ssh_port }}<br />
 {% endif %}
 <br />
-[web]<br />
-{% for grouper, list in instances.results|groupby('item') if grouper.item[0] == user %}
-{% for vm in list %}
-{% if 'control' not in vm.invocation.module_args.instance_tags.Name and 'haproxy' not in vm.invocation.module_args.instance_tags.Name%}
-{{ vm.invocation.module_args.instance_tags.Name | regex_replace('.*-(node)(\\d)', '\\1-\\2') }} ansible_host={{ vm.tagged_instances[0].public_ip }}<br />
+[cfme]<br />
+{% for vm in instances.results if vm.invocation.module_args.instance_tags.pod == user.username %}
+{% if 'cfme' not in vm.invocation.module_args.instance_tags.role%}
+{{ vm.invocation.module_args.instance_tags.name | regex_replace('.*-(node)(\\d)', '\\1-\\2') }} ansible_host={{ vm.tagged_instances[0].public_ip }}<br />
 {% endif %}
 {% endfor %}
+<br />
+[tower]<br />
+{% for vm in instances.results if vm.invocation.module_args.instance_tags.pod == user.username %}
+{% if 'tower' not in vm.invocation.module_args.instance_tags.role%}
+{{ vm.invocation.module_args.instance_tags.name | regex_replace('.*-(node)(\\d)', '\\1-\\2') }} ansible_host={{ vm.tagged_instances[0].public_ip }}<br />
+{% endif %}
+{% endfor %}
+<br />
+[web]<br />
+{% for vm in instances.results if vm.invocation.module_args.instance_tags.pod == user.username %}
+{% if 'control' not in vm.invocation.module_args.instance_tags.name and 'haproxy' not in vm.invocation.module_args.instance_tags.name%}
+{{ vm.invocation.module_args.instance_tags.name | regex_replace('.*-(node)(\\d)', '\\1-\\2') }} ansible_host={{ vm.tagged_instances[0].public_ip }}<br />
+{% endif %}
 {% endfor %}
 <br />
 [control]<br />
-{% for grouper, list in instances.results|groupby('item') if grouper.item[0] == user %}
-{% for vm in list %}
-{% if 'control' in vm.invocation.module_args.instance_tags.Name %}
-{{ vm.invocation.module_args.instance_tags.Name | regex_replace('.*-([\\w]*)', '\\1') }} ansible_host={{ vm.tagged_instances[0].public_ip }}<br />
+{% for vm in instances.results if vm.invocation.module_args.instance_tags.pod == user.username %}
+{% if 'control' in vm.invocation.module_args.instance_tags.name %}
+{{ vm.invocation.module_args.instance_tags.name | regex_replace('.*-([\\w]*)', '\\1') }} ansible_host={{ vm.tagged_instances[0].public_ip }}<br />
 {% endif %}
-{% endfor %}
 {% endfor %}</p>
     </div>
   </div>
