--- a/roles/generate-content/templates/instances.txt.j2
+++ b/roles/generate-content/templates/instances.txt.j2
@@ -21,14 +21,14 @@ ansible_port={{ ssh_port }}
 
 [web]
 {% for vm in instances.results if vm.invocation.module_args.instance_tags.pod == item.username %}
-{% if 'control' not in vm.invocation.module_args.instance_tags.name and 'haproxy' not in vm.invocation.module_args.instance_tags.name%}
+{% if 'web' in vm.invocation.module_args.instance_tags.role %}
 {{ vm.invocation.module_args.instance_tags.name | regex_replace('.*-(node)(\\d)', '\\1-\\2') }} ansible_host={{ vm.tagged_instances[0].public_ip }}
 {% endif %}
 {% endfor %}
 
 [control]
 {% for vm in instances.results if vm.invocation.module_args.instance_tags.pod == item.username %}
-{% if 'control' in vm.invocation.module_args.instance_tags.name %}
+{% if 'control' in vm.invocation.module_args.instance_tags.role %}
 {{ vm.invocation.module_args.instance_tags.name | regex_replace('.*-([\\w]*)', '\\1') }} ansible_host={{ vm.tagged_instances[0].public_ip }}
 {% endif %}
 {% endfor %}
