--- a/roles/generate-content/templates/instructor_inventory.j2
+++ b/roles/generate-content/templates/instructor_inventory.j2
@@ -7,7 +7,7 @@ ansible_port={{ ssh_port }}
 [{{ user.username }}]
 {% for host in instances.results %}
 {% if user.username == host.invocation.module_args.instance_tags.pod %}
-{{ host.invocation.module_args.instance_tags.name | regex_replace(ec2_name_prefix ~ '-','') }} ansible_host={{ host.tagged_instances[0].public_ip }}
+{{ host.invocation.module_args.instance_tags.name | regex_replace('.*-([\\w]*)', '\\1') }} ansible_host={{ host.tagged_instances[0].public_ip }}
 {% endif %}
 {% endfor %}
 {% endfor %}
