--- a/roles/generate-content/templates/w2-tower-cf-lb-index.html.j2
+++ b/roles/generate-content/templates/w2-tower-cf-lb-index.html.j2
@@ -35,9 +35,10 @@ Try it Yourself »
 
 <div data-role="page" id="pageone">
   <div data-role="header">
-    <h1>Ansible Lightbulb Workshop</h1>
+    <h1>Management Lightbulb Workshop - Ansible Tower and CloudForms</h1>
   </div>
   <div data-role="main">
+    <img src="https://www.redhat.com/profiles/rh/themes/redhatdotcom/img/Red_Hat_RGB.jpg"/>
     <img src="https://www.ansible.com/hubfs/2016_Images/Assets/Ansible-Tower-Logotype-Small-RGB-FullBlack.png"/>
     <h3>CONTACT: "{{ instructor_email }}"<br>
 
