--- a/roles/generate-content/templates/w2-tower-cf-lb-index.html.j2
+++ b/roles/generate-content/templates/w2-tower-cf-lb-index.html.j2
@@ -52,7 +52,7 @@ GITHUB for Ansible Lightbulb: <a href="https://github.com/ansible/lightbulb" tar
 
 <h4><a href="http://ansible-workshop.redhatgov.io/decks/ansible-essentials.html#/" target="new_1">DECK: Ansible Essentials</a><br></h4>
 <h4><a href="http://ansible-workshop.redhatgov.io/decks/intro-to-ansible-tower.html" target="new_2">DECK:  Intro To Tower</a><br></h4>
-<h4><a href="http://ansible-workshop.redhatgov.io/standard/workshop/index.html" target="new_main">LAB GUIDE</a><br><br></h4>
+<h4><a href="workshop/index.html" target="new_main">LAB GUIDE</a><br><br></h4>
 
 <hr>
 
