--- a/roles/generate-content/templates/w2-tower-cf-lb-index.html.j2
+++ b/roles/generate-content/templates/w2-tower-cf-lb-index.html.j2
@@ -78,7 +78,7 @@ Request Licensing page (Pick the second option: non-Enterprise version for immed
     <div data-role="collapsible">
       <h1>{{ user.username }} - Click to see details!</h1>
       <h2>Use the links below</h2><br />
-      CloudForms URL (root/smartvm):
+      CloudForms URL (admin/smartvm):
 {% for vm in instances.results if vm.invocation.module_args.instance_tags.pod == user.username %}
 {% if 'cfme' in vm.invocation.module_args.instance_tags.role %}
 <a href="http://{{ vm.invocation.module_args.instance_tags.name | regex_replace('.*-(node)(\\d)', '\\1-\\2') }}" target="cf_url_{{ user.username }}">http://{{ vm.invocation.module_args.instance_tags.name | regex_replace('.*-(node)(\\d)', '\\1-\\2') }}</a><br />
