--- a/templates/windows.userdata.txt.j2
+++ b/templates/windows.userdata.txt.j2
@@ -2,6 +2,6 @@
 $admin = [adsi]("WinNT://./Administrator, user")
 $admin.PSBase.Invoke("SetPassword", "{{ domain_admin_password }}")
 & $([scriptblock]::Create((New-Object Net.WebClient).DownloadString("https://raw.githubusercontent.com/ansible/ansible/devel/examples/scripts/ConfigureRemotingForAnsible.ps1")))
-Rename-Computer -NewName {{ item.name }}
+Rename-Computer -NewName "test"
 Restart-Computer
 </powershell>
