--- a/roles/generate-content/templates/instructor_inventory.j2
+++ b/roles/generate-content/templates/instructor_inventory.j2
@@ -5,9 +5,7 @@ ansible_port={{ ssh_port }}
 
 {% for user in users %}
 [{{ user.username }}]
-{% for host in instances.results %}
-{% if user.username == host.invocation.module_args.instance_tags.pod %}
-{{ host.invocation.module_args.instance_tags.name | regex_replace('.*-([\\w]*)', '\\1') }} ansible_host={{ host.tagged_instances[0].public_ip }}
-{% endif %}
+{% for vm in groups['tag_pod_' + item.username] %}
+{{ hostvars[vm].hostname }} ansible_host={{ vm }}
 {% endfor %}
 {% endfor %}
