--- a/roles/generate-content/templates/w1-ansible-tower-lb-index.html.j2
+++ b/roles/generate-content/templates/w1-ansible-tower-lb-index.html.j2
@@ -83,15 +83,19 @@ ansible_ssh_pass={{ admin_password }}<br />
 ansible_port={{ ssh_port }}<br />
 {% endif %}
 <br />
+{% if groups.tag_role_web is defined %}
 [web]<br />
 {% for vm in groups.tag_role_web if vm in groups['tag_pod_' + user.username] %}
 {{ hostvars[vm].hostname }} ansible_host={{ vm }}<br />
 {% endfor %}
+{% endif %}
 <br />
+{% if groups.tag_role_control is defined %}
 [control]<br />
 {% for vm in groups.tag_role_control if vm in groups['tag_pod_' + user.username] %}
 {{ hostvars[vm].hostname }} ansible_host={{ vm }}<br />
-{% endfor %}</p>
+{% endfor %}
+{% endif %}</p>
     </div>
   </div>
 {% endfor %}
