--- a/roles/generate-content/templates/w3-ansible-tower-win-lb-index.html.j2
+++ b/roles/generate-content/templates/w3-ansible-tower-win-lb-index.html.j2
@@ -83,32 +83,34 @@ ansible_ssh_pass={{ admin_password }}<br />
 ansible_port={{ ssh_port }}<br />
 {% endif %}
 <br />
+{% if groups.tag_role_windows_node is defined %}
 [windows]<br />
 {% for vm in groups.tag_role_windows_node if vm in groups['tag_pod_' + user.username] %}
 {{ hostvars[vm].hostname }} ansible_host={{ vm }}<br />
 {% endfor %}
+{% endif %}
 <br />
+{% if groups.tag_role_windows_workstation is defined %}
 [windows_workstation]<br />
 {% for vm in groups.tag_role_windows_workstation if vm in groups['tag_pod_' + user.username] %}
 {{ hostvars[vm].hostname }} ansible_host={{ vm }}<br />
 {% endfor %}
+{% endif %}
 <br />
+{% if groups.tag_role_windows is defined %}
 [windows:vars]<br />
 ansible_connection=winrm
 ansible_winrm_transport=basic
 ansible_winrm_server_cert_validation=ignore
 ansible_port=5986
+{% endif %}
 <br />
-[windows_workstation:vars]<br />
-ansible_connection=winrm
-ansible_winrm_transport=basic
-ansible_winrm_server_cert_validation=ignore
-ansible_port=5986
-<br />
+{% if groups.tag_role_control is defined %}
 [control]<br />
 {% for vm in groups.tag_role_control if vm in groups['tag_pod_' + user.username] %}
 {{ hostvars[vm].hostname }} ansible_host={{ vm }}<br />
-{% endfor %}</p>
+{% endfor %}
+{% endif %}</p>
     </div>
   </div>
 {% endfor %}
