change item to user

--- a/roles/generate-content/templates/instructor_inventory.j2
+++ b/roles/generate-content/templates/instructor_inventory.j2
@@ -5,7 +5,7 @@ ansible_port={{ ssh_port }}
 
 {% for user in users %}
 [{{ user.username }}]
-{% for vm in groups['tag_pod_' + item.username] %}
+{% for vm in groups['tag_pod_' + user.username] %}
 {{ hostvars[vm].hostname }} ansible_host={{ vm }}
 {% endfor %}
 {% endfor %}
