--- a/roles/nginx-ssl/templates/site.conf.j2
+++ b/roles/nginx-ssl/templates/site.conf.j2
@@ -45,3 +45,12 @@ server {
 {% endif %}
 {% endfor %}
 }
+
+location / {
+        proxy_pass http://private_ip_address:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+     }
