add wetty_port in w1-ansible-tower-lb-index.html.j2

--- a/roles/generate-content/templates/w1-ansible-tower-lb-index.html.j2
+++ b/roles/generate-content/templates/w1-ansible-tower-lb-index.html.j2
@@ -82,7 +82,7 @@ Request Licensing page (Pick the second option: non-Enterprise version for immed
 {% for vm in groups.tag_role_control if vm in groups['tag_pod_' + user.username] %}
 <a href="/{{ user.username }}" target="control_node_url_{{ user.username }}">{{ user.username }}</a><br />
       or<br />
-<a href="https://{{ vm }}:8888" target="control_node_url_{{ user.username }}">https://{{ vm }}:8888</a><br />
+<a href="https://{{ vm }}:{{ wetty_port }}" target="control_node_url_{{ user.username }}">https://{{ vm }}:{{ wetty_port }}</a><br />
 {% endfor %}
 {% endif %}<br />
       <h2>Inventory</h2>
