--- a/roles/nginx-ssl/templates/site.conf.j2
+++ b/roles/nginx-ssl/templates/site.conf.j2
@@ -30,27 +30,16 @@ server {
 {% if groups.tag_role_control is defined %}
 {% for vm in groups.tag_role_control if vm in groups['tag_pod_' + user.username] %}
     location /{{ user.username }} {
-      rewrite /{{ user.username }}/(.*)$ /$1 break;
-
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
       proxy_set_header X-NginX-Proxy true;
       proxy_set_header X-Ssl on;
 
-      proxy_pass https://{{ vm }}:8888;
+      proxy_pass https://{{ vm }}:{{ wetty_port }};
       proxy_redirect off;
     }
 {% endfor %}
 {% endif %}
 {% endfor %}
 }
-
-location / {
-        proxy_pass http://private_ip_address:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-     }
