--- a/roles/generate-content/templates/w3-ansible-tower-win-lb-index.html.j2
+++ b/roles/generate-content/templates/w3-ansible-tower-win-lb-index.html.j2
@@ -76,6 +76,21 @@ Request Licensing page (Pick the second option: non-Enterprise version for immed
   <div data-role="main" class="ui-content">
     <div data-role="collapsible">
       <h1>{{ user.username }} - Click to see details!</h1>
+      <h2>Use the links below</h2><br />
+{% if groups.tag_role_windows_workstation is defined %}
+      Login to your workstation using RDP ({{ user.username }}/{{ users_password }}):
+{% for vm in groups.tag_role_windows_workstation if vm in groups['tag_pod_' + user.username] %}
+<a href="rdp://{{ vm }}" target="wk_url_{{ user.username }}">rdp://{{ vm }}</a><br />
+{% endfor %}
+{% endif %}<br />
+{% if groups.tag_role_gitlab is defined %}
+      Login to your gitlab URL ({{ user.username }}/{{ users_password }}):
+{% for vm in groups.tag_role_gitlab if vm in groups['tag_pod_main'] %}
+<a href="https://{{ vm }}" target="gl_url_{{ user.username }}">https://{{ vm }}</a><br />
+{% endfor %}
+{% endif %}<br />
+<br />
+      <h2>Inventory</h2>
       <p>[all:vars]<br />
 ansible_user={{ user.username }}<br />
 ansible_ssh_pass={{ admin_password }}<br />
